Fixed the UI alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 mgl-map {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
 .inputmap {
